--- a/expense.conf
+++ b/expense.conf
@@ -1,6 +1,6 @@
 proxy_http_version 1.1;
 
-location /api/ { proxy_pass http://backend.saikrishna.cloud	:8080/; }
+location /api/ { proxy_pass http://asd	:8080/; }
 
 location /health {
   stub_status on;
