--- a/backend.service
+++ b/backend.service
@@ -3,7 +3,7 @@ Description = Backend Service
 
 [Service]
 User=expense
-Environment=DB_HOST="172.31.46.181"
+Environment=DB_HOST="mysql.rdevopsb73.online"
 ExecStart=/bin/node /app/index.js
 SyslogIdentifier=backend
 
